--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -25,6 +25,23 @@ Notes:
         ==== x.x.x - YYYY/MM/DD
 ////
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+* feat: implemented sanitize_feature_names specification
+
+        Allows users to configure a list of wildcard patterns to _remove_ items
+        from the agent's HTTP header and `application/x-www-form-urlencoded` payloads.
+        
+        spec: https://github.com/elastic/apm/blob/master/specs/agents/sanitization.md
+        docs: https://github.com/elastic/apm-agent-nodejs/blob/master/docs/configuration.asciidoc#sanitize-field-names
+        
+[float]
+===== Bug fixes
 
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
