--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -69,6 +69,9 @@ require('elastic-apm-node').start({
   // Use if APM Server requires a token
   secretToken: '',
 
+  // Use if APM Server uses API keys for authentication
+  apiKey: '',
+
   // Set custom APM Server URL (default: http://localhost:8200)
   serverUrl: '',
 
