--- a/docs/custom-stack.asciidoc
+++ b/docs/custom-stack.asciidoc
@@ -48,6 +48,9 @@ var apm = require('elastic-apm-node').start({
   // Use if APM Server requires a token
   secretToken: '',
 
+  // Use if APM Server uses API keys for authentication
+  apiKey: '',
+
   // Set custom APM Server URL (default: http://localhost:8200)
   serverUrl: '',
 })
