--- a/docs/hapi.asciidoc
+++ b/docs/hapi.asciidoc
@@ -43,6 +43,9 @@ const apm = require('elastic-apm-node').start({
   // Use if APM Server requires a token
   secretToken: '',
 
+  // Use if APM Server uses API keys for authentication
+  apiKey: '',
+
   // Set custom APM Server URL (default: http://localhost:8200)
   serverUrl: '',
 })
