Cloud Metadata Fetching (#1937)
* Implements: https://github.com/elastic/apm-agent-nodejs/issues/1815

* feat: cloud metadata request

* chore: move test file

* feat: test complete

* feat: working through test failures

* fix: tests

* chore: re-org

* feat: reorg metadata

* chore: undo test removal

* chore: remove console.log

* feat: request module

* chore: moving on up

* chore: instrumentation path

* chore: bringing over test server fixtures from other branch

* chore: lint cleanup post-elrequest

* fix: failure handlers for request

* chore: lint

* feat: add cli interface for quick testing on cloud servers

* chore: exit codes for cli

* feat: fetch metadata for all, corrdinate messages

* feat: error handling for non-json responses

* feat: adding agent configuration of cloud provider and tests for same

* chore: module constants for timeouts

* ci: new test server endpoint for v2 amazon

* feat: add v2 server tests and implementation

* fix: error handling

* chore: lint

* test: full testing of unexpected responses from metadata server

* chore: lint

* test: tests for coordination object

* chore: rename to CallbackCoordination

* chore: rename library file

* fix: cleanup timeout in coordination

* chore: lint

* fix: better pattern for no double callbacks on errors

* feat: logging, comment proofread

* feat: APM Server wants strings for everything, add type casting/checking

* chore: fix port

* chore: lint

* chore: changelog

* chore: adjust log level

* chore: add link to issue

* chore: nits -- variable name and error type export

* chore: lint, remove unused data

* fix: better pattern for request callback

* chore: variable rename

* chore: change from passing entire agent to just passing provider name

* chore: use logger arg instead of global agent instance

* chore: for loop style

* chore: cast with string objects instead of concats

* cho

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -42,6 +42,13 @@ Notes:
   allow numeric and boolean labels. Stringify defaults to true for backwards
   compatibility -- stringification will be removed in a future major version.
 
+* feat: added support for cloud metadata fetching
+  Implements: https://github.com/elastic/apm-agent-nodejs/issues/1815
+
+  Agent now collects information about its cloud environment and includes this data in the APM Server's metadata payload.  See
+  https://github.com/elastic/apm/blob/3acd10afa0a9d3510e819229dfce0764133083d3/specs/agents/metadata.md#cloud-provider-metadata
+  for more information.
+
 [float]
 ===== Bug fixes
 
