--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,11 +28,8 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-[[release-notes-3.11.0]]
-==== 3.11.0 - 2021/02/08
-
-[float]
-===== Features
+[[release-notes-unreleased]]
+==== Unreleased
 
 * feat: set span outcome to success or failure depending on whether an error
   was captured during when the span was active.
@@ -41,6 +38,22 @@ Notes:
 * feat: Adds public `setOutcome` method to span and transaction APIs, and
   adds a top level `setTransactionOutcome` and `setSpanOutcome` to set
   outcome values for the current active transaction or active span.
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+[[release-notes-3.11.0]]
+==== 3.11.0 - 2021/02/08
+
+[float]
+===== Features
+
 * feat: add `apm.getServiceName()` {pull}1949[#1949] +
   This will be used by https://github.com/elastic/ecs-logging-js[ecs-logging packages]
   to integrate with APM.
