--- a/docs/span-api.asciidoc
+++ b/docs/span-api.asciidoc
@@ -177,7 +177,7 @@ nothing happens.
 
 [[span-outcome]]
 ==== `span.outcome`
-[small]#Added in: v?.?.?#
+[small]#Added in: v3.12.0#
 
 The Node.js agent automatically sets an `outcome` property on spans.  This property will be one of three values
 
@@ -196,7 +196,7 @@ However, for `external` spans that represent an HTTP request, the `outcome` is b
 [[span-setoutcome]]
 ==== `span.setOutcome(outcome)`
 
-[small]#Added in: v?.?.?#
+[small]#Added in: v3.12.0#
 
 * `outcome` +{type-string}+
 
