--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,6 +28,25 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+
+[[release-notes-unreleased]]
+==== Unreleased
+
+[float]
+===== Breaking changes
+[float]
+===== Features
+[float]
+===== Bug fixes
+
+* fix: fixes bug where tedious could crash the agent on bulk inserts
+  Reported [via the forum](https://discuss.elastic.co/t/apm-agent-crashes-nodejs-after-reporting-exception-in-tedious-instrumentation-code/259851)
+
+  Error manifested via the following error statment.
+
+  `Cannot read property 'statement' of undefined`
+
+
 [[release-notes-3.11.0]]
 ==== 3.11.0 - 2021/02/08
 
@@ -49,18 +68,6 @@ Notes:
   data in the APM Server's metadata payload. See
   https://github.com/elastic/apm/blob/3acd10afa0a9d3510e819229dfce0764133083d3/specs/agents/metadata.md#cloud-provider-metadata[the spec]
   for more information.
-
-[float]
-===== Bug fixes
-
-* fix: fixes bug where tedious could crash the agent on bulk inserts
-  Reported [via the forum](https://discuss.elastic.co/t/apm-agent-crashes-nodejs-after-reporting-exception-in-tedious-instrumentation-code/259851)
-
-  Error manifested via the following error statment.
-
-  `Cannot read property 'statement' of undefined`
-
-
 
 [[release-notes-3.10.0]]
 ==== 3.10.0 - 2021/01/11
