fix: local `cloudProvider` config is overwritten by a central config
Fixes: #1976

--- a/docs/release-notes.asciidoc
+++ b/docs/release-notes.asciidoc
@@ -1,4 +1,5 @@
 :pull: https://github.com/elastic/apm-agent-nodejs/pull/
+:issues: https://github.com/elastic/apm-agent-nodejs/issues/
 
 [[release-notes]]
 == Release notes
