--- a/docs/agent-api.asciidoc
+++ b/docs/agent-api.asciidoc
@@ -309,6 +309,8 @@ See the <<apm-add-labels,`apm.addLabels()`>> method for details about the format
 
 ** `captureAttributes` +{type-boolean}+ Whether to include properties on the given +{type-error}+ object in the data sent to the APM Server (as `error.exception.attributes`). *Default:* `true`.
 
+** `skipOutcome` +{type-boolean}+ Whether to skip setting the outcome value for the current span to `failure`.  See <<span-outcome,Span outcome>> for more information. *Default:* `false`.
+
 * `callback` - Will be called after the error has been sent to the APM Server.
 It will receive an `Error` instance if the agent failed to send the error,
 and the id of the captured error
@@ -833,3 +835,25 @@ apm.registerMetric( 'ws.connections' , {module : 'ws'}, () => {
 })
 
 ----
+
+[[apm-transaction-outcome]]
+==== `apm.setTransactionOutcome(outcome)`
+
+[small]#Added in: v3.12.0#
+
+* `outcome` +{type-string}+
+
+Will set the outcome property on the _current_ transaction.
+
+See the <<transaction-outcome, Transaction Outcome docs>> for more information.
+
+[[apm-span-outcome]]
+==== `apm.setSpanOutcome(outcome)`
+
+[small]#Added in: v3.12.0#
+
+* `outcome` +{type-string}+
+
+Will set the outcome property on the _current_ span.
+
+See the <<span-outcome, Span Outcome docs>> for more information.
