feat: pino logging
This switches the APM agent to use pino for structured logging. Visible
changes:

- Default logging output is now JSON in ecs-logging format to stdout,
  rather than just a plain message to stdout or stderr (warn and above).
- Custom loggers are still supported and there shouldn't be any breakage
  there. This is done by wrapping the custom logger in a pino logger
  that will just pass the log message through. This means that when we
  add structure log fields (for example "foo" in `log.info({foo:
  bar}, 'my message')`), then users of a custom logger will not see
  those structured fields. I think that is fine.

TODO:
- [ ] The logLevel config var now *applies* to a given custom logger.
  Discuss this. Custom loggers are wrapped in a pino logger that
  writes the log message to the custom logger. The logLevel is on that
  pino logger wrapper. I think I should change this to set the wrapper
  to 'trace' level and *not* use `logLevel` as before... otherwise the
  user has *two* confusing log levels to coordinate.
- [ ] Drop the 'pid' and 'hostname' default fields as discussed in #1430
  that this PR is obsoleting. I need to fix a bug in
  @elastic/ecs-format-pino for this.
- [ ] Check/handle this case:
  `this.logger.warn(new Error('cannot flush agent before it is started'))`
- [ ] Do we need `crlf: platform() === 'win32',` from the prev PR?
- [ ] Update troubleshooting doc for logging changes. Including turning
  *off* a custom logger than can hide data.

Things to do after this PR:
- pass the logger to the http client
- change over lots of the current logging statements to use structured
  data, including a 'span' serializer (as in PR #1430)

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -434,8 +434,6 @@ require('elastic-apm-node').start({
 Set the verbosity level for the agent.
 Note that this does not have any influence on the types of errors that are sent to the APM Server.
 This only controls how chatty the agent is in your logs.
-As well, this only applies when using the built in logger.
-Log levels will not be automatically applied to a custom `logger`.
 
 Possible levels are: `trace`, `debug`, `info`, `warning`, `error`, `critical`, and `off`.
 
@@ -444,21 +442,51 @@ Possible levels are: `trace`, `debug`, `info`, `warning`, `error`, `critical`, a
 
 * *Type:* object
 
-Set a custom logger, e.g. https://github.com/trentm/node-bunyan[bunyan]:
+Pass in a custom logger. The custom logger must provide `trace`, `debug`,
+`info`, `warn`, `error`, and `fatal` methods that take a string message
+argument.
+
+As of version 3.13, the agent uses structured logging using the
+https://getpino.io/#/docs/api?id=logger[pino API]. To avoid issues with
+incompatible logger APIs, a given a custom logger is wrapped in a logger that
+drops fields other than the log _message_. As a special case, if the provided
+logger is a _pino logger instance_, then it will be used directly. Note, as
+well, that as of version 3.13 the <<log-level,`logLevel`>> configuration
+value *applies* to a custom logger.
+
+An example using a custom pino logger:
+
+[source,js]
+----
+const pino = require('pino')
+require('elastic-apm-node').start({
+  logger: pino({ level: 'info' })
+})
+----
+
+or using a https://github.com/trentm/node-bunyan[Bunyan] logger:
+
+[source,js]
+----
+const bunyan = require('bunyan')
+require('elastic-apm-node').start({
+  logger: bunyan.createLogger({ level: 'info' })
+})
+----
+
+To get the https://github.com/watson/console-log-level[unstructured logging output]
+used in agent versions before 3.13, use the following:
 
 [source,js]
 ----
 require('elastic-apm-node').start({
-  logger: require('bunyan')({ level: 'info' })
+  logger: require('console-log-level')()
 })
 ----
 
-If no custom logger is provided,
-the agent will use its built-in logger which will log to STDOUT and STDERR depending on the log level.
-
-The logger should expose the following functions: `trace`, `debug`,`info`, `warn`, `error`, and `fatal`.
-
-Note that if a custom logger is provided, the `logLevel` option will be ignored.
+If no custom logger is provided, the agent will log to stdout in
+https://www.elastic.co/guide/en/ecs-logging/overview/current/intro.html[ecs-logging]
+format.
 
 [[capture-exceptions]]
 ==== `captureExceptions`
