find more cases of dangling args in log statements (thanks to Alan's review)
This also improves/fixes a few log stmts in lib/instrumentation/shimmer.js
to include a message and stack in a single log stmt.

--- a/docs/fastify.asciidoc
+++ b/docs/fastify.asciidoc
@@ -67,7 +67,7 @@ fastify.get('/', function (request, reply) {
 // Run the server!
 fastify.listen(3000, function (err, address) {
   if (err) throw err
-  fastify.log.info('server listening on', address)
+  fastify.log.info(`server listening on ${address}`)
 })
 ----
 
